--- a/src/app/components/herosection/hero.css
+++ b/src/app/components/herosection/hero.css
@@ -4,8 +4,6 @@
 }
 
 .hero {
-  /* We'll not use px to define the length and will use rem. */
-  /* max-width: 1300px; */
   max-width: 130rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -123,7 +121,7 @@
   color: var(--secondary-color);
 }
 
-@media (max-width: 1305px) {
+@media (max-width: 1700px) {
   .hero {
     display: flex;
     flex-direction: column;
@@ -138,7 +136,7 @@
   .btn:link,
   .btn:visited {
     font-size: 1.5rem;
-    padding: 1rem 2rem;
+    padding:  2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -164,9 +162,7 @@
     width: 3.8rem;
     height: 3.8rem;
   }
-  .margin-right-btn {
-    margin-right: auto;
-  }
+
   .hero {
     display: flex;
     flex-direction: column;
