--- a/src/app/components/whychooseus/chooseus.css
+++ b/src/app/components/whychooseus/chooseus.css
@@ -14,7 +14,7 @@
 }
 .choose-card-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
